5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_820.log
== TEST (2019-03-27 13:26:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
 v= VALOR// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VALOR // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VALOR//2
resto3 = v3%10




print(int(resto))
print(int(resto2))
print(int(resto3))

-- ERROR:
File "XXXX", line 8
    v= VALOR// 50  
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:26:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
 v= VALOR// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VALOR // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VALOR//2
resto3 = v3%10




print(resto)
print(resto2)
print(resto3)

-- ERROR:
File "XXXX", line 8
    v= VALOR// 50  
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:27:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3 = v3%10




print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:27:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3 = v3%100




print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:28:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:28:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10





print(resto)
print(resto2)
print(v3)

-- EXECUTION TIME:
0.207687
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:29:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3%10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:29:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//100
resto3=v3%10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:29:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//10

resto3=v3%10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:30:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//1
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
2028
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:30:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
1014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:31:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3=v3 % 100





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
1014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:31:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:31:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3 % 20





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:31:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//30
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:31:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//30
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- EXECUTION TIME:
0.122677
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:32:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//50
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:32:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//50
resto3=v3 % 10





print(resto)
print(resto2)
print(v3)

-- EXECUTION TIME:
0.271516
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
40
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:33:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10






print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:34:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//50
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:34:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//100
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//10
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:35:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3%10






print(resto)
print(resto2)
print(resto3)

-- EXECUTION TIME:
0.131903
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:35:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//2
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:36:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//50
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:36:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:36:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL//20
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:37:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- EXECUTION TIME:
0.123319
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:37:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL
resto3=v3%2






print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:37:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10
resto3=






print(resto)
print(resto2)
print(v3)

-- ERROR:
File "XXXX", line 18
    resto3=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:37:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10







print(resto)
print(resto2)
print(v3)

-- OUTPUT:
40
2
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:38:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10
resto=v3//2







print(resto)
print(resto2)
print(v3)

-- OUTPUT:
4
2
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:38:45) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10
resto3=v3//2







print(resto)
print(resto2)
print(resto3)

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:38:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10
resto3=v3//2







print(resto)
print(resto2)
print(resto3)

-- EXECUTION TIME:
0.210538
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VAL = int(input("Qual o valor do saque: "))

# Quantidade de notas de R$ 50
v= VAL// 50  
resto = v % 50
# Valor restante a ser sacado com notas menores que R$ 50


# Quantidade de notas de R$ 10
v2 = VAL // 10
resto2 = v2 % 10
# Valor restante a ser sacado com notas menores que R$ 50
v3=VAL%10
resto3=v3//2







print(resto)
print(resto2)
print(resto3)

-- EXECUTION TIME:
0.179448
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
